last corrections:spacing/flex/sizing :fire:

--- a/styles.css
+++ b/styles.css
@@ -25,13 +25,12 @@ html {
   height: 100%;
   width: 100vw;
   scroll-behavior: smooth;
-  /* border: 10px solid red; */
 }
+
 body {
   background-color: white;
   font-family: var(--font);
   height: 100%;
-  /* border: 10px solid tomato; */
 }
 .body__container {
   width: 95%;
@@ -80,7 +79,6 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* border-bottom: 2px solid yellow; */
 }
 .logo {
   transform: translateY(25%);
@@ -122,7 +120,6 @@ nav ul li a:hover {
   color: var(--bleu);
   font-weight: bold;
 }
-
 nav ul li:nth-child(1):hover ~ .line {
   left: 0;
 }
@@ -141,32 +138,37 @@ main {
   grid-template-columns: 67% 1fr;
   grid-column-gap: 2vw;
   grid-row-gap: 2vh;
+  margin-top: 4vh;
 }
 /***************************************************************/
 /*                             INTRO 
 /***************************************************************/
 
 #intro {
+  min-height: 250px;
   grid-row: 1;
   grid-column: 1/3;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  height: 300px;
+  justify-content: space-between;
+  /* border: 1px solid red; */
 }
 
 /*************************** SEARCH BAR ************************/
 
 .title__container {
-  min-height: 60px;
+  min-height: min-content;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+}
+.subtitle {
+  line-height: 1.5rem;
 }
 form {
   height: 40px;
   display: flex;
   justify-content: flex-start;
+  /* border: 1px solid red; */
 }
 form .icon__container {
   background-color: var(--background);
@@ -215,32 +217,26 @@ form button:hover {
 /**************************** FILTERS **************************/
 
 .filters {
-  width: 72%;
+  min-height: 10vh;
+  width: max-content;
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  /* border: 1px solid red; */
 }
 .filters h2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   font-size: 1rem;
+  width: 7ch;
   font-weight: 700;
-  padding-right: 20px;
 }
 .filters ul {
-  width: 100%;
+  /* width: max-content; */
   display: flex;
-  justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
-  border: 1px solid greenyellow;
-}
-.filters ul li {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  gap: var(--flex-gap);
 }
 .filters .filter {
-  height: inherit;
   width: max-content;
   display: flex;
   align-items: center;
@@ -287,11 +283,13 @@ form button:hover {
 /****************************** INFO ***************************/
 
 .info {
-  height: 30px;
+  /* height: 30px; */
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  /* border: 1px solid red; */
+  transform: translateY(-10px);
 }
 .info .icon__container {
   height: 20px;
@@ -610,7 +608,6 @@ footer li {
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding-top: 1.5vh;
   }
 
   /************************** HEADER **************************/
@@ -618,7 +615,6 @@ footer li {
   header {
     height: 100px;
     width: 100%;
-    order: 1;
     flex-direction: column;
     justify-content: space-between;
     position: relative;
@@ -638,7 +634,6 @@ footer li {
     top: 100%;
     left: 0;
     width: 50%;
-    z-index: 10;
   }
   nav ul :nth-child(3) {
     height: min-content;
@@ -666,18 +661,15 @@ footer li {
   /*************************** INTRO *************************/
 
   #intro {
-    height: 500px;
+    min-height: 350px;
     justify-content: space-between;
     order: 2;
     padding: 2vh 10px 0 10px;
-  }
-  .title__container {
-    height: 100px;
+    gap: var(--flex-gap);
   }
   #intro form {
     height: 50px;
     width: 95%;
-    margin: 2vh 0;
     padding-left: 10px;
   }
   form input {
@@ -708,28 +700,29 @@ footer li {
     display: none;
   }
   .filters {
-    height: 200px;
+    min-height: max-content;
     width: 100%;
     flex-direction: column;
+    align-items: flex-start;
     justify-content: center;
-    padding-left: 10px;
+    gap: 10px;
   }
   .filters ul {
-    height: inherit;
-    width: 90%;
     flex-wrap: wrap;
   }
   .filter__name {
     padding: 10px 15px;
   }
   .info {
-    padding: 0 15px;
-    margin: 2vh 0;
+    transform: unset;
   }
   .info__p {
     font-size: 0.9rem;
   }
 
+  main {
+    margin-top: 0;
+  }
   /************************* HEBERGEMENT *********************/
 
   #hebergement {
@@ -749,7 +742,6 @@ footer li {
   }
   .cards__hebergement .card .card__img {
     height: 150px;
-    background-position: center 60%;
   }
 
   /*************************** POPULAIRE **********************/
@@ -771,7 +763,7 @@ footer li {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 20px 3vh;
+    padding: 10px 20px;
   }
   .cards__activities {
     width: 100%;
@@ -796,14 +788,14 @@ footer li {
 
   footer {
     height: max-content;
-    width: 100%;
     min-width: 320px;
+    padding: 10px 20px;
   }
   .footer__container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 30px 0 30px 10px;
+    padding-top: 20px;
   }
   .footer__menu {
     padding-bottom: 30px;
@@ -814,45 +806,44 @@ footer li {
 /*                         TABLETS 
 /***************************************************************/
 
-@media only screen and (min-width: 768px) and (max-width: 1200px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
   .body__container {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+
   main {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   header,
   #intro {
-    padding: 0 20px;
-  }
-  header,
-  .logo {
-    padding: 0 10px 10px;
-  }
-  nav ul {
-    justify-content: space-between;
+    width: 95%;
   }
   #intro {
-    height: 300px;
-  }
-  .title__container {
-    height: 60px;
+    min-height: 300px;
+    gap: var(--flex-gap);
+    padding-bottom: 10px;
   }
   .filters {
-    height: 100px;
-    justify-content: space-between;
-  }
-  .filters ul {
-    height: inherit;
     width: 100%;
     flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 10px;
+  }
+  .info {
+    transform: unset;
   }
 
   /************************* HEBERGEMENT **********************/
 
   #hebergement {
-    order: 4;
+    order: 3;
     background-color: white;
   }
   #hebergement button {
@@ -869,7 +860,7 @@ footer li {
 
   #populaire {
     height: max-content;
-    order: 3;
+    order: 2;
     border-radius: 0;
   }
   .cards__populaire {
@@ -885,7 +876,7 @@ footer li {
   /************************* ACTIVITIES ***********************/
 
   #activities {
-    order: 5;
+    order: 4;
     padding: 0 20px 3vh;
   }
   .cards__activities {
@@ -903,11 +894,5 @@ footer li {
   }
   .cards__activities .card img {
     object-fit: cover;
-  }
-
-  /************************* FOOTER ***********************/
-
-  footer {
-    padding: 10px 0 20px 10px;
   }
 }
